# gboi-kirby

./: .gitmodules  CODEOWNERS  README.md  build.sh  test_deplacement.s
collision/: collision.c
docs/: Gemfile  _config.yml  index.html
docs/_posts/: 2020-06-19-hello-world.adoc  2020-06-19-hello-world.md  2020-06-19-welcome-to-jekyll.markdown  2020-06-20-setting-up-gh-pages.md  2020-06-22-a-foray-into-game-design.md  2020-06-22-on-git.md  2020-06-23-inception-of-the-murderous-pineapple.md  2020-06-24-its-alive.md  2020-06-24-mapgen-part1.md  2020-06-25-halfway-through.md  2020-06-25-some-explanation-on-graphics.md  2020-06-28-back-from-pains-perdus-hq.md  2020-06-28-on-debugging.md  2020-06-29-clock-is-ticking.md  2020-06-29-lore-and-first-enemies.md  2020-06-29-lore-and-first-ennemies.md  2020-06-29-make-pear-jaw-come-true.md  2020-06-29-making-pear-jaw-come-true.md  2020-07-01-integrating-pineys-foes.md  2020-07-01-mapgen-part2.md  2020-07-01-rusty-bit-manipulation.md  2020-07-02-paf-the-end.md  2020-07-02-to-c-or-not-to-c.md
docs/assets/: 0.1-release-demo.webm  2020-06-28-collisions.webm  2020-07-01-mapgen-integration.webm  babysteps2.webm  enemy_death.webm
enemy-test/: Makefile  enemy_monster.c
floorgen/: Makefile
floorgen/py/: test.py
main-rom/: .gitignore  Makefile  README.md  build.sh
movement-test/: .gitignore  Makefile  README.md  bgb.ini  bgbrecovery.sna  collision.c
ogmo/: ogmo.ogmo
ogmo/ogmo-parser/: Cargo.toml
ogmo/ogmo-parser/src/: main.rs  ogmo.rs
ogmo/ogmo-parser/test-data/: empty1.json
podpacker/: Cargo.toml
room-gen/: Makefile
(+69 files in other folders)
